# python-all-features

./: .gitignore
.github/workflows/: ci.yml
python-learning-practice/: README.md  pyproject.toml
python-learning-practice/docs/: NOTES.md
python-learning-practice/src/learnpy/: cli.py
python-learning-practice/src/learnpy/lessons/: basics.py  logging_demo.py  oop.py
src/learnpy/: registry.py
src/learnpy/lessons/: advanced_python.py  async_demo.py  variable_demo.py
tests/: test_registry.py
