[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "learnpy"
version = "0.1.0"
description = "Learning & practice Python project with best standards."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "coverage[toml]>=7.5",
]

[project.scripts]
learnpy = "learnpy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/learnpy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle/pyflakes
  "I",                # import sorting
  "UP",               # pyupgrade
  "B",                # flake8-bugbear
  "SIM",              # flake8-simplify
  "RUF",              # ruff-specific
]
ignore = [
  "E501", # line length handled by formatter/line-length setting
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true

[tool.coverage.run]
branch = true
source = ["learnpy"]

[tool.coverage.report]
skip_empty = true
show_missing = true
